# aiokpl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
0.2/: 404.html  index.html  sitemap.xml
0.2/aggregation-format/: index.html
0.2/architecture/: index.html
0.2/benchmarks/: index.html
0.2/dev/anyio/: index.html
0.2/dev/releasing/: index.html
0.2/dev/setup/: index.html
0.2/dev/sinks/: index.html
0.2/dev/testing/: index.html
0.2/examples/fastapi/: index.html
0.2/getting-started/: index.html
0.2/phases/: index.html
0.2/phases/phase-1-codec/: index.html
0.2/phases/phase-2-shardmap/: index.html
0.2/phases/phase-3-batching/: index.html
0.2/phases/phase-4-rate-limiting/: index.html
0.2/phases/phase-5-sender-retrier/: index.html
0.2/phases/phase-6-producer/: index.html
0.2/phases/phase-7-metrics/: index.html
0.2/phases/phase-8-sync/: index.html
0.2/philosophy/: index.html
0.2/reference/SUMMARY/: index.html
0.2/reference/aiokpl/: index.html
0.2/reference/aiokpl/aggregation/: index.html
0.2/reference/aiokpl/aggregator/: index.html
0.2/reference/aiokpl/collector/: index.html
0.2/reference/aiokpl/config/: index.html
0.2/reference/aiokpl/hashing/: index.html
0.2/reference/aiokpl/limiter/: index.html
0.2/reference/aiokpl/metrics/: index.html
0.2/reference/aiokpl/outcome/: index.html
0.2/reference/aiokpl/producer/: index.html
0.2/reference/aiokpl/reducer/: index.html
0.2/reference/aiokpl/result/: index.html
0.2/reference/aiokpl/retrier/: index.html
0.2/reference/aiokpl/sender/: index.html
0.2/reference/aiokpl/shard_map/: index.html
0.2/reference/aiokpl/sinks/: index.html
0.2/reference/aiokpl/sinks/cloudwatch/: index.html
0.2/reference/aiokpl/sinks/datadog/: index.html
0.2/reference/aiokpl/sinks/memory/: index.html
0.2/reference/aiokpl/sinks/null/: index.html
0.2/reference/aiokpl/sinks/opentelemetry/: index.html
0.2/reference/aiokpl/sync/: index.html
0.2/reference/aiokpl/token_bucket/: index.html
0.2/search/: search_index.json
0.2/why/: index.html
aiokpl/: __init__.py  aggregation.py  aggregator.py  collector.py  config.py  hashing.py  limiter.py  metrics.py  outcome.py  producer.py  reducer.py  result.py  retrier.py  sender.py  shard_map.py  sync.py  token_bucket.py
aiokpl/sinks/: __init__.py  _types.py  cloudwatch.py  datadog.py  memory.py  null.py  opentelemetry.py
benchmarks/: README.md  _harness.py  _smoke.py  bench_latency.py  bench_throughput.py
benchmarks/results/: latency.json  latency.txt  throughput.json  throughput.txt
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/aggregation-format/: index.html
dev/architecture/: index.html
dev/benchmarks/: index.html
dev/dev/anyio/: index.html
dev/dev/releasing/: index.html
dev/dev/setup/: index.html
dev/dev/sinks/: index.html
dev/dev/testing/: index.html
dev/examples/fastapi/: index.html
dev/getting-started/: index.html
dev/phases/: index.html
dev/phases/phase-1-codec/: index.html
dev/phases/phase-2-shardmap/: index.html
dev/phases/phase-3-batching/: index.html
dev/phases/phase-4-rate-limiting/: index.html
dev/phases/phase-5-sender-retrier/: index.html
dev/phases/phase-6-producer/: index.html
dev/phases/phase-7-metrics/: index.html
dev/phases/phase-8-sync/: index.html
dev/philosophy/: index.html
dev/reference/SUMMARY/: index.html
dev/reference/aiokpl/: index.html
dev/reference/aiokpl/aggregation/: index.html
dev/reference/aiokpl/aggregator/: index.html
dev/reference/aiokpl/collector/: index.html
dev/reference/aiokpl/config/: index.html
dev/reference/aiokpl/hashing/: index.html
dev/reference/aiokpl/limiter/: index.html
dev/reference/aiokpl/metrics/: index.html
dev/reference/aiokpl/outcome/: index.html
dev/reference/aiokpl/producer/: index.html
dev/reference/aiokpl/reducer/: index.html
dev/reference/aiokpl/result/: index.html
dev/reference/aiokpl/retrier/: index.html
dev/reference/aiokpl/sender/: index.html
dev/reference/aiokpl/shard_map/: index.html
dev/reference/aiokpl/sinks/: index.html
dev/reference/aiokpl/sinks/cloudwatch/: index.html
dev/reference/aiokpl/sinks/datadog/: index.html
dev/reference/aiokpl/sinks/memory/: index.html
dev/reference/aiokpl/sinks/null/: index.html
dev/reference/aiokpl/sinks/opentelemetry/: index.html
dev/reference/aiokpl/sync/: index.html
dev/reference/aiokpl/token_bucket/: index.html
dev/search/: search_index.json
dev/why/: index.html
docs/: aggregation-format.md  architecture.md  benchmarks.md  getting-started.md  index.md  philosophy.md  why.md
docs/dev/: anyio.md  releasing.md  setup.md  sinks.md  testing.md
docs/examples/: fastapi.md
docs/phases/: index.md  phase-1-codec.md  phase-2-shardmap.md  phase-3-batching.md  phase-4-rate-limiting.md  phase-5-sender-retrier.md  phase-6-producer.md  phase-7-metrics.md  phase-8-sync.md
examples/: fastapi_producer.py
scripts/: gen_ref_pages.py
tests/: conftest.py  test_aggregation.py  test_aggregator.py  test_collector.py  test_config.py  test_hashing.py  test_limiter.py  test_metrics.py  test_outcome.py  test_producer.py  test_reducer.py  test_retrier.py  test_sender.py  test_shard_map.py  test_sink_cloudwatch.py  test_sink_datadog.py  test_sink_memory.py  test_sink_null.py  test_sink_opentelemetry.py  test_sink_protocol.py  test_sync.py  test_token_bucket.py
tests/integration/: conftest.py  test_aggregator_collector_integration.py  test_backpressure_integration.py  test_cloudwatch_sink_integration.py  test_codec_roundtrip.py  test_limiter_integration.py  test_producer_integration.py  test_retrier_integration.py  test_retrier_paths_integration.py  test_shard_map_floci.py  test_shard_map_integration.py  test_sync_integration.py
